src/objects/Check_List_Header_Template__c.object
<CustomObject>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Check List Header Templates</relationshipLabel>
        <relationshipName>Check_List_Header_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEVELOP-Pre-Contract</fullName>
                </value>
                <value>
                    <fullName>INITIATE-Turnover</fullName>
                </value>
                <value>
                    <fullName>PLAN-Pre-Construction</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Delivery</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Installation</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Commissioning</fullName>
                </value>
                <value>
                    <fullName>CONTROL-Punchlist</fullName>
                </value>
                <value>
                    <fullName>CLOSE-Closeout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Check List Header Template</label>
    <nameField>
        <displayFormat>CHT-{00000}</displayFormat>
        <label>Check List Header Template Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check List Header Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>